# job_search_agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  deep_research_prompt.md  fly.toml  prd.md  pyproject.toml
src/jsa/: __init__.py  canonicalize.py  cli.py  config.py  db.py  models.py  naming.py  pipeline.py  review.py
src/jsa/ats/: __init__.py  fetch.py  html_to_md.py  resolve.py
src/jsa/search/: __init__.py  claude_runner.py  parse.py  perplexity_runner.py  prompt.py
