[project]
name = "job-search-agent"
version = "0.1.0"
description = "A personal job-search agent (Claude Agent SDK) that runs a daily search for Customer Education / Enablement / Community roles, stores them idempotently, and collects fit feedback."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "libsql-client>=0.3",
    "markdownify>=0.13",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.scripts]
jsa = "jsa.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jsa"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "W", "F", "I", "UP", "B"]
